<resources>
    <string name="app_name">MathWorld</string>

    <string name="_6e" translatable="false">6e</string>
    <string name="_5e" translatable="false">5e</string>
    <string name="_4e" translatable="false">4e</string>
    <string name="_3e" translatable="false">3e</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="management">Management</string>
    <string name="notebook">Notebook</string>
    <string name="panglossya" translatable="false">Panglossya</string>
    <string name="modify_class">Modify class</string>
    <string name="enter_the_class_s_name">Enter the class\'s name</string>
    <string name="level">Level</string>
    <string name="save">Save</string>
    <string name="enter_name">Please enter a name to save the class</string>
    <string name="remove">Remove</string>
    <string name="class_list">Class List</string>
    <string name="first_class">First class</string>
    <string name="second_class">Second class</string>
    <string name="third_class">Third class</string>
    <string name="fourth_class">Fourth class</string>
    <string name="fifth_class">Fifth class</string>
    <string name="add_student">Add student</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="choose_job">Choose job</string>
    <string name="bard">Barde</string>
    <string name="shapeshifter">Changelin</string>
    <string name="empath">Empathe</string>
    <string name="rogue">Filou</string>
    <string name="bettor">Parieur</string>
    <string name="spellweaver">Tisse-sort</string>
    <string name="hacker">Hacker</string>
    <string name="choose_group">Choose group</string>
    <string name="fill_fields">Please enter name and lastname to save.</string>
    <string name="student_added">is added to the class !</string>
    <string name="level_up"> level up !</string>
    <string name="configure_xp">Configure xp</string>
    <string name="xp_1">XP + 1</string>
    <string name="xp_5">xp + 5</string>
    <string name="xp_10">xp + 10</string>
    <string name="xp_gain">Xp mode +  </string>
    <string name="experience">Experience</string>
    <string name="life">Life</string>
    <string name="lvl">Lvl</string>
    <string name="xp_gain_txt">Xp gain:</string>
    <string name="what_quantity">What quantity ?</string>
    <string name="save_score">Save score</string>
    <string name="cancel">Cancel</string>
    <string name="summary">Summary</string>
    <string name="over_thirty">You cannot choose a number over 30 !</string>
    <string name="save_num_ninja">Save done</string>
    <string name="edit_student">Edit student</string>
    <string name="updated"> updated !"</string>
    <string name="modify_level">Modify level</string>
    <string name="modify_job">Modify job</string>
    <string name="belt">Belt</string>
    <string name="edit_class">Edit class</string>


    <string-array name="Level">
        <item>6e</item>
        <item>5e</item>
        <item>4e</item>
        <item>3e</item>
    </string-array>

</resources>