<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/nav_header">

    <item android:title="@string/class_list">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/header_item_first"
                    android:icon="@drawable/class_icon"
                    android:title="@string/first_class" />

                <item
                    android:id="@+id/header_item_second"
                    android:icon="@drawable/class_icon"
                    android:title="@string/second_class" />

                <item
                    android:id="@+id/header_item_third"
                    android:icon="@drawable/class_icon"
                    android:title="@string/third_class" />

                <item
                    android:id="@+id/header_item_fourth"
                    android:icon="@drawable/class_icon"
                    android:title="@string/fourth_class" />

                <item
                    android:id="@+id/header_item_fifth"
                    android:icon="@drawable/class_icon"
                    android:title="@string/fifth_class" />

            </group>
        </menu>
    </item>
</menu>