<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.AddStudentActivity">

    <LinearLayout
        android:id="@+id/add_student_toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>



    <ImageView
        android:id="@+id/add_student_current_class_crown"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintEnd_toStartOf="@+id/add_student_current_class_response"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/crown"/>

    <TextView
        android:id="@+id/add_student_current_class_response"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/add_student_current_class_crown"
        app:layout_constraintBottom_toBottomOf="@id/add_student_current_class_crown"
        android:layout_marginStart="20dp"
        android:text="First class"
        android:textSize="16sp"
        android:textColor="@color/orange"/>

    <ImageView
        android:id="@+id/add_student_current_class_crown2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintStart_toEndOf="@+id/add_student_current_class_response"
        app:layout_constraintTop_toTopOf="@id/add_student_current_class_crown"
        android:layout_marginStart="20dp"
        android:src="@drawable/crown"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_student_firstname_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/add_student_current_class_crown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/firstname"
        android:textSize="15sp"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_student_firstname_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_student_lastname_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/add_student_firstname_text"
        app:layout_constraintStart_toStartOf="@id/add_student_firstname_text"
        app:layout_constraintEnd_toEndOf="@id/add_student_firstname_text"
        android:layout_marginTop="10dp"
        android:hint="@string/lastname"
        android:textSize="15sp"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_student_lastname_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/student_job_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/add_student_firstname_text"
        app:layout_constraintTop_toBottomOf="@id/add_student_lastname_text"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/choose_job"
        android:textSize="15sp"/>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/student_job_text"
        android:layout_marginHorizontal="16dp"/>

    <ImageView
        android:id="@+id/add_student_job_bard"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/student_job_text"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/avatar_barde"
        android:background="@drawable/round_job_image_yellow"
        android:clipToOutline="true"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/add_student_job_bard_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/add_student_job_bard"
        app:layout_constraintEnd_toEndOf="@id/add_student_job_bard"
        app:layout_constraintTop_toBottomOf="@id/add_student_job_bard"
        android:text="@string/bard"/>

    <ImageView
        android:id="@+id/add_student_job_shapeshifter"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintStart_toEndOf="@id/add_student_job_bard"
        app:layout_constraintTop_toTopOf="@id/add_student_job_bard"
        android:layout_marginStart="20dp"
        android:src="@drawable/avatar_changelin"
        android:background="@drawable/round_orange"
        android:clipToOutline="true"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/add_student_job_shapeshifter_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/add_student_job_shapeshifter"
        app:layout_constraintEnd_toEndOf="@id/add_student_job_shapeshifter"
        app:layout_constraintTop_toBottomOf="@id/add_student_job_shapeshifter"
        android:text="@string/shapeshifter"/>

    <ImageView
        android:id="@+id/add_student_job_empath"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintStart_toEndOf="@id/add_student_job_shapeshifter"
        app:layout_constraintTop_toTopOf="@id/add_student_job_bard"
        android:layout_marginStart="20dp"
        android:src="@drawable/avatar_empathe"
        android:background="@drawable/round_orange"
        android:clipToOutline="true"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/add_student_job_empath_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/add_student_job_empath"
        app:layout_constraintEnd_toEndOf="@id/add_student_job_empath"
        app:layout_constraintTop_toBottomOf="@id/add_student_job_empath"
        android:text="@string/empath"/>

    <ImageView
        android:id="@+id/add_student_job_rogue"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintStart_toEndOf="@id/add_student_job_empath"
        app:layout_constraintTop_toTopOf="@id/add_student_job_bard"
        android:layout_marginStart="20dp"
        android:src="@drawable/avatar_filou"
        android:background="@drawable/round_orange"
        android:clipToOutline="true"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/add_student_job_rogue_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/add_student_job_rogue"
        app:layout_constraintEnd_toEndOf="@id/add_student_job_rogue"
        app:layout_constraintTop_toBottomOf="@id/add_student_job_rogue"
        android:text="@string/rogue"/>

    <ImageView
        android:id="@+id/add_student_job_bettor"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintStart_toStartOf="@id/add_student_job_bard"
        app:layout_constraintEnd_toEndOf="@id/add_student_job_shapeshifter"
        app:layout_constraintTop_toBottomOf="@id/add_student_job_bard_text"
        android:layout_marginTop="10dp"
        android:src="@drawable/avatar_parieur"
        android:background="@drawable/round_orange"
        android:clipToOutline="true"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/add_student_job_bettor_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/add_student_job_bettor"
        app:layout_constraintEnd_toEndOf="@id/add_student_job_bettor"
        app:layout_constraintTop_toBottomOf="@id/add_student_job_bettor"
        android:text="@string/bettor"/>

    <ImageView
        android:id="@+id/add_student_job_spellweaver"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintStart_toStartOf="@id/add_student_job_shapeshifter"
        app:layout_constraintEnd_toEndOf="@id/add_student_job_empath"
        app:layout_constraintTop_toTopOf="@id/add_student_job_bettor"
        android:src="@drawable/avatar_tisse_sorts"
        android:background="@drawable/round_orange"
        android:clipToOutline="true"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/add_student_job_spellweaver_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/add_student_job_spellweaver"
        app:layout_constraintEnd_toEndOf="@id/add_student_job_spellweaver"
        app:layout_constraintTop_toBottomOf="@id/add_student_job_spellweaver"
        android:text="@string/spellweaver"/>

    <ImageView
        android:id="@+id/add_student_job_hacker"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintStart_toStartOf="@id/add_student_job_empath"
        app:layout_constraintEnd_toEndOf="@id/add_student_job_rogue"
        app:layout_constraintTop_toTopOf="@id/add_student_job_bettor"
        android:src="@drawable/avatar_hacker"
        android:background="@drawable/round_orange"
        android:clipToOutline="true"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/add_student_job_hacker_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/add_student_job_hacker"
        app:layout_constraintEnd_toEndOf="@id/add_student_job_hacker"
        app:layout_constraintTop_toBottomOf="@id/add_student_job_hacker"
        android:text="@string/hacker"/>


    <TextView
        android:id="@+id/add_student_group_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/student_job_text"
        app:layout_constraintTop_toBottomOf="@id/add_student_job_bettor_text"
        android:layout_marginTop="30dp"
        android:text="@string/choose_group"/>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_student_group_text"
        android:layout_marginHorizontal="16dp"/>

    <ImageView
        android:id="@+id/add_student_group_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_student_group_text"
        android:layout_marginTop="20dp"
        android:src="@drawable/travail_en_equipe"
        android:clickable="true"
        android:focusable="true"
        app:tint="@color/dark_orange" />

    <TextView
        android:id="@+id/add_student_group_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/add_student_group_image"
        app:layout_constraintEnd_toEndOf="@id/add_student_group_image"
        app:layout_constraintTop_toTopOf="@id/add_student_group_image"
        app:layout_constraintBottom_toBottomOf="@id/add_student_group_image"
        android:layout_marginBottom="20dp"
        android:text="1"
        android:textSize="30sp"
        android:textColor="@color/orange"
        android:textStyle="bold"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_student_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/add_student_firstname_text"
        app:layout_constraintEnd_toEndOf="@id/add_student_firstname_text"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        android:text="@string/save"
        app:cornerRadius="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>