<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="280dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/add_class_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/add_class"
        android:textColor="@color/orange"
        android:textSize="28sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_class_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_class_title"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:endIconMode="clear_text"
        android:hint="@string/enter_the_class_s_name"
        android:textSize="15sp">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/add_class_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_class_level_choice"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_class_name"
        android:layout_marginTop="5dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:hint="@string/level">

     <com.google.android.material.textfield.MaterialAutoCompleteTextView
        android:id="@+id/add_class_level_choice_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:inputType="none"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_class_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/add_class_title"
        app:layout_constraintEnd_toEndOf="@id/add_class_title"
        app:layout_constraintTop_toBottomOf="@id/add_class_level_choice"
        android:layout_marginTop="20dp"
        android:text="@string/save"
        app:cornerRadius="20dp"/>




</androidx.constraintlayout.widget.ConstraintLayout>