<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.StudentDetailsActivity">

    <LinearLayout
        android:id="@+id/student_detail_toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/student_detail_job_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="55dp"
        android:src="@drawable/carote"/>

    <ImageView
        android:id="@+id/student_detail_belt_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/student_detail_job_image"
        android:src="@drawable/white_belt"/>

    <TextView
        android:id="@+id/student_detail_job"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hacker"
        android:textColor="@color/teal_200"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/student_detail_name"
        app:layout_constraintStart_toStartOf="@id/student_detail_name"
        app:layout_constraintTop_toTopOf="@id/student_detail_job_image"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/student_detail_level_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/student_detail_job"
        app:layout_constraintStart_toStartOf="@id/student_detail_job"
        android:text="@string/level"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/student_detail_level_response"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/student_detail_level_text"
        app:layout_constraintTop_toTopOf="@id/student_detail_level_text"
        android:layout_marginStart="5dp"
        android:text="2"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/student_detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student_detail_job_image"
        android:layout_marginTop="40dp"
        android:text="Jean-gabriel russo"
        android:textStyle="bold"
        android:textColor="@color/orange"
        android:textSize="22sp" />

    <ImageView
        android:id="@+id/student_detail_name_image"
        android:layout_width="400dp"
        android:layout_height="300dp"
        app:layout_constraintStart_toStartOf="@id/student_detail_name"
        app:layout_constraintEnd_toEndOf="@id/student_detail_name"
        app:layout_constraintTop_toTopOf="@id/student_detail_name"
        app:layout_constraintBottom_toBottomOf="@id/student_detail_name"
        android:src="@drawable/ribbon"
        android:layout_marginBottom="20dp"
        android:alpha="0.6"/>

    <TextView
        android:id="@+id/student_detail_experience_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/student_detail_name"
        android:layout_marginTop="35dp"
        android:layout_marginStart="15dp"
        android:text="@string/experience"
        android:textSize="16sp"
        android:textStyle="italic"/>

    <ProgressBar
        android:id="@+id/student_detail_experience_bar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/student_detail_experience_text"
        app:layout_constraintTop_toTopOf="@id/student_detail_experience_text"
        app:layout_constraintBottom_toBottomOf="@id/student_detail_experience_text"
        android:layout_marginStart="14dp"
        style="?android:attr/progressBarStyleHorizontal"
        android:progressTint="@color/orange"
        android:indeterminate="false"/>

    <TextView
        android:id="@+id/student_detail_experience_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/student_detail_experience_bar"
        app:layout_constraintTop_toTopOf="@id/student_detail_experience_bar"
        app:layout_constraintBottom_toBottomOf="@id/student_detail_experience_bar"
        android:layout_marginStart="5dp"
        android:text="1/10"
        android:textSize="10sp"/>

    <TextView
        android:id="@+id/student_detail_life_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/student_detail_experience_text"
        app:layout_constraintTop_toBottomOf="@id/student_detail_experience_text"
        android:layout_marginTop="10dp"
        android:text="@string/life"
        android:textSize="16sp"
        android:textStyle="italic"/>

    <ProgressBar
        android:id="@+id/student_detail_life_bar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/student_detail_experience_bar"
        app:layout_constraintTop_toTopOf="@id/student_detail_life_text"
        app:layout_constraintBottom_toBottomOf="@id/student_detail_life_text"
        style="?android:attr/progressBarStyleHorizontal"
        android:progressTint="@color/red_light"
        android:indeterminate="false"/>

    <TextView
        android:id="@+id/student_detail_life_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/student_detail_experience_result"
        app:layout_constraintTop_toTopOf="@+id/student_detail_life_bar"
        app:layout_constraintBottom_toBottomOf="@+id/student_detail_life_bar"
        android:text="1/10"
        android:textSize="10sp"/>

    <TextView
        android:id="@+id/student_detail_power_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/student_detail_life_text"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        android:text="Powers"/>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/student_detail_power_text"
        android:layout_marginHorizontal="16dp"/>

    <ImageView
    android:id="@+id/student_detail_power1_image"
    android:layout_width="120dp"
    android:layout_height="100dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/student_detail_power_text"
    android:layout_marginTop="10dp"
    android:layout_marginStart="50dp"
    android:src="@drawable/power_scroll_open"/>

    <TextView
        android:id="@+id/student_detail_power1_text"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/student_detail_power1_image"
        app:layout_constraintEnd_toEndOf="@id/student_detail_power1_image"
        app:layout_constraintTop_toTopOf="@id/student_detail_power1_image"
        app:layout_constraintBottom_toBottomOf="@id/student_detail_power1_image"
        android:layout_marginStart="25dp"
        android:text="Package de données"
        android:textStyle="italic|bold"
        android:textColor="@color/dark_orange"
        android:textSize="14sp"
        android:textAlignment="center"/>

    
    <ImageView
        android:id="@+id/student_detail_power2_image"
        android:layout_width="120dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/student_detail_power1_image"
        android:layout_marginEnd="50dp"
        android:src="@drawable/power_scroll_closed"/>

    <TextView
        android:id="@+id/student_detail_power2_text"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/student_detail_power2_image"
        app:layout_constraintEnd_toEndOf="@id/student_detail_power2_image"
        app:layout_constraintTop_toTopOf="@id/student_detail_power2_image"
        app:layout_constraintBottom_toBottomOf="@id/student_detail_power2_image"
        android:layout_marginStart="25dp"
        android:text="Package de données"
        android:textStyle="italic|bold"
        android:textColor="@color/dark_orange"
        android:textSize="14sp"
        android:textAlignment="center"/>

    <ImageView
        android:id="@+id/student_detail_power3_image"
        android:layout_width="120dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="@id/student_detail_power1_image"
        app:layout_constraintTop_toBottomOf="@id/student_detail_power1_image"
        android:layout_marginTop="30dp"
        android:src="@drawable/power_scroll_closed"/>

    <TextView
        android:id="@+id/student_detail_power3_text"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/student_detail_power3_image"
        app:layout_constraintEnd_toEndOf="@id/student_detail_power3_image"
        app:layout_constraintTop_toTopOf="@id/student_detail_power3_image"
        app:layout_constraintBottom_toBottomOf="@id/student_detail_power3_image"
        android:layout_marginStart="25dp"
        android:text="Package de données"
        android:textStyle="italic|bold"
        android:textColor="@color/dark_orange"
        android:textSize="14sp"
        android:textAlignment="center"/>

    <ImageView
        android:id="@+id/student_detail_power4_image"
        android:layout_width="120dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="@id/student_detail_power2_image"
        app:layout_constraintTop_toTopOf="@id/student_detail_power3_image"
        android:src="@drawable/power_scroll_open"/>

    <TextView
        android:id="@+id/student_detail_power4_text"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/student_detail_power4_image"
        app:layout_constraintEnd_toEndOf="@id/student_detail_power4_image"
        app:layout_constraintTop_toTopOf="@id/student_detail_power4_image"
        app:layout_constraintBottom_toBottomOf="@id/student_detail_power4_image"
        android:layout_marginStart="25dp"
        android:text="Package de données"
        android:textStyle="italic|bold"
        android:textColor="@color/dark_orange"
        android:textSize="14sp"
        android:textAlignment="center"/>

    <ImageView
        android:id="@+id/student_detail_power5_image"
        android:layout_width="120dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="@id/student_detail_power1_image"
        app:layout_constraintTop_toBottomOf="@id/student_detail_power3_image"
        android:layout_marginTop="30dp"
        android:src="@drawable/power_scroll_open"/>

    <TextView
        android:id="@+id/student_detail_power5_text"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/student_detail_power5_image"
        app:layout_constraintEnd_toEndOf="@id/student_detail_power5_image"
        app:layout_constraintTop_toTopOf="@id/student_detail_power5_image"
        app:layout_constraintBottom_toBottomOf="@id/student_detail_power5_image"
        android:layout_marginStart="25dp"
        android:text="Package de données"
        android:textStyle="italic|bold"
        android:textColor="@color/dark_orange"
        android:textSize="14sp"
        android:textAlignment="center"/>

    <ImageView
        android:id="@+id/student_detail_power6_image"
        android:layout_width="120dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="@id/student_detail_power2_image"
        app:layout_constraintTop_toTopOf="@id/student_detail_power5_image"
        android:src="@drawable/power_scroll_open"/>

    <TextView
        android:id="@+id/student_detail_power6_text"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/student_detail_power6_image"
        app:layout_constraintEnd_toEndOf="@id/student_detail_power6_image"
        app:layout_constraintTop_toTopOf="@id/student_detail_power6_image"
        app:layout_constraintBottom_toBottomOf="@id/student_detail_power6_image"
        android:layout_marginStart="25dp"
        android:text="Package de données"
        android:textStyle="italic|bold"
        android:textColor="@color/dark_orange"
        android:textSize="14sp"
        android:textAlignment="center"/>


</androidx.constraintlayout.widget.ConstraintLayout>